# LDM

./: .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh
daemons/: cpu_temp.cpp  daemon_api.cpp  daemon_api.h  daemon_api.hpp  daemon_comm_api.hpp  daemon_function_wrapper.hpp  example.cpp  vault.cpp
src/: daemon_cache.json  interface.cpp  listener.cpp
src/lib/util/: helper_functions.cpp  helper_functions.h  helper_functions.hpp
